# pwncat

./: pyproject.toml
pwncat/: manager.py
pwncat/commands/: __init__.py
pwncat/modules/linux/enumerate/system/: uname.py
pwncat/modules/linux/implant/: pam.py
pwncat/modules/windows/: powersploit.py
pwncat/platform/: __init__.py  linux.py
