[tool.isort]
profile = "black"
length_sort = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "-v"

[tool.poetry]
name = "pwncat-cs"
version = "0.5.4"
description = "Reverse and bind shell automation framework"
readme = "README.md"
repository = "https://github.com/calebstewart/pwncat"
documentation = "https://pwncat.readthedocs.io"
keywords = ["offsec", "cyber", "exploitation", "privesc", "automation"]
packages = [
  { include = "pwncat" },
]
license = "MIT"

[tool.poetry.scripts]
pwncat-cs = "pwncat.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/calebstewart/pwncat/issues"

[tool.poetry.dependencies]
python = "^3.9"
netifaces = "^0.11.0"
packaging = "^23.2"
prompt-toolkit = "^3.0.43"
pycryptodome = "^3.20.0"
requests = "^2.31.0"
rich = "^13.7.0"
python-rapidjson = "^1.14"
ZODB3 = "^3.11.0"
zodburi = { git = "https://github.com/Pylons/zodburi.git", branch = "modernize-python-versions" }
Jinja2 = "^3.1.3"
paramiko = "^3.4.0 "
PyNaCl = "^1.5.0"
sphinx-toolbox = { version = "^3.5.0", optional = true }
Sphinx = { version = "^7.2.6", optional = true }
enum-tools = { version = "^0.11.0", optional = true }
furo = { version = "^2024.1.29", optional = true }

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pytest = "^6.2.4"
flake8 = "^3.9.2"

[tool.poetry.extras]
docs = ["sphinx-toolbox", "Sphinx", "enum-tools", "furo"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



